--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Ilikeyou.github.io</h1>
-        <h2>GitHub</h2>
+        <h2>GitHub-local</h2>
         <a href="https://github.com/ilikeyou" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
